tests/invalid/function/generic_expected_unsolved_type_param.facet
fn keep<T, U>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  (keep 1)
}
